hsmc-macros/tests/ui/t9_4_default_non_child.stderr
error: `default(Cousin)` in state `Parent`: `Cousin` is not a direct child of `Parent`
  --> tests/ui/t9_4_default_non_child.rs:14:9
   |
14 |         default(Cousin);
   |         ^^^^^^^
